@@ -114,6 +114,7 @@ if (! GetOptions (
 		  "debug"	=> \&debug,
 		  "exclude=s"	=> sub {shift; push @Opt_Exclude, shift;},
 		  "help"	=> \&usage,
+		  "language=s"	=> sub { shift; Verilog::Language::language_standard(shift); },
 		  "minimum!"	=> \$Opt_Minimum,
 		  "nopli!"	=> \$Opt_NoPli,
 		  "quiet!"	=> \$Opt_Quiet,
@@ -127,6 +128,8 @@ if (! GetOptions (
 		  )) {
     die "%Error: Bad usage, try 'vpm --help'\n";
 }
+
+our $Line_Supported = $Opt_Verilator || Verilog::Language::language_standard() ne '1364-1995';
 
 push @files, ($Opt->incdir(), $Opt->library(), $Opt->module_dir());
 
@@ -590,8 +593,8 @@ sub vpm_process {
     if ($Got_Change) {
 	my $date = localtime;
 	$fh->open(">$outname") or die "%Error: Can't write $outname.";
-	if ($Opt_Verilator) {
-	    print $fh "`line 1 \"$filename\"\n";
+	if ($Line_Supported) {
+	    print $fh "`line 1 \"$filename\" 0\n";
 	}
 	# No newline so line counts not affected
 	print $fh "/* Generated by vpm; File:\"$filename\" */";
@@ -1138,6 +1141,12 @@ Exclude processing any files which begin with the specified prefix.
 =item --help
 
 Displays this message and program version and exits.
+
+=item --language <1364-1995|1364-2001|1364-2005|1800-2005>
+
+Set the language standard for the files.  This determines which tokens are
+signals versus keywords, such as the ever-common "do" (data-out signal,
+versus a do-while loop keyword).
 
 =item --minimum
 
