@@ -7,6 +7,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***	Add Netlist net, port and module ->delete methods. [Daniel Schoch]
 
+***	Vpm now enables `line comments unless using Verilog 1995.
+
 * Verilog::Language 3.041 2008/09/03
 
 **	Verilog-Perl development versions are now available from a git server.
